k8s/scribble.yml
# For the database resource, we create a network policy that uses the admission controller concept. It only allows incoming requests from the backend. If you look at the network policy for the database, it is applied to the database pod and only allows ingress traffic from the backend. This is controlled using labels — the label is defined on the backend pod.
# ==============================================================
# scribble Platform - Kubernetes Manifest file
# Includes: Namespace, Secrets, PVC (EBS), DB, Backend, Frontend
# ==============================================================

# ---- Namespace ----
apiVersion: v1
kind: Namespace
metadata:
  name: scribble
  labels:
    app.kubernetes.io/part-of: scribble

---
# ---- PostgreSQL Deployment ----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribble-db
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-db
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: database
spec:
  replicas: 1
  strategy:
    type: Recreate # Required for RWO volumes
  selector:
    matchLabels:
      app.kubernetes.io/name: scribble-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scribble-db
        app.kubernetes.io/part-of: scribble
        app.kubernetes.io/component: database
    spec:
      # Security: don't automount service account token (DB doesn't need K8s API). By default, Kubernetes automatically mounts a ServiceAccount token inside every pod at:/var/run/secrets/kubernetes.io/serviceaccount/token. This token allows the pod to talk to the Kubernetes API.
      # The Problem - Most application pods (frontend, backend) don't need to talk to the Kubernetes API at all. But the token is mounted anyway — so if a pod is compromised, an attacker can use that token to interact with your cluster.
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          # Security context
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # Postgres needs write access
            runAsNonRoot: false            # Postgres image runs initdb as root then drops
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "scribble_user", "-d", "scribble_db"]
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "scribble_user", "-d", "scribble_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: scribble-db-pvc

---
# ---- PostgreSQL Service (ClusterIP — internal only) ----
apiVersion: v1
kind: Service
metadata:
  name: scribble-db
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-db
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scribble-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP

---
# ---- Backend Deployment ----

apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribble-backend
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-backend
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: scribble-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scribble-backend
        app.kubernetes.io/part-of: scribble
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: backend
          image: ghcr.io/kamuju25/scribble/scribble-backend:749e81e
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3

---
# ---- Backend Service (ClusterIP — internal only) ----
apiVersion: v1
kind: Service
metadata:
  name: scribble-backend
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-backend
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scribble-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP

---
# ---- Frontend Deployment ----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scribble-frontend
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-frontend
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: scribble-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scribble-frontend
        app.kubernetes.io/part-of: scribble
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: frontend
          image: ghcr.io/kamuju25/scribble/scribble-frontend:749e81e
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
# ---- Frontend Service (NodePort — for access via port-forward or node IP) ----
# NOTE: Changed from LoadBalancer because this AWS account does not support
# creating load balancers as it is a free account. Use `kubectl port-forward svc/scribble-frontend 8080:80 -n scribble`
# to access the frontend locally.
apiVersion: v1
kind: Service
metadata:
  name: scribble-frontend
  namespace: scribble
  labels:
    app.kubernetes.io/name: scribble-frontend
    app.kubernetes.io/part-of: scribble
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: scribble-frontend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP

---
# ---- NetworkPolicy: DB only accepts traffic from Backend ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scribble-db-allow-backend-only
  namespace: scribble
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: scribble-db  # This policy applies to the db pod
  policyTypes:
    - Ingress # we are controlling incoming traffic
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: scribble-backend #only allows traffic from backend pod.
      ports:
        - port: 5432 # only on postgres port
          protocol: TCP

---
# ---- NetworkPolicy: Backend accepts traffic from Frontend only ----
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scribble-backend-allow-frontend-only
  namespace: scribble
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: scribble-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: scribble-frontend
      ports:
        - port: 5000
          protocol: TCP
